--- a/package.json
+++ b/package.json
@@ -15,16 +15,25 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "react-redux": "^9.1.1",
-    "zod": "^3.23.4"
+    "react-redux": "^9.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/stylelint": "^14.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.1.0",
     "prettier": "^3.2.5",
-    "typescript": "^5"
+    "stylelint": "^16.4.0",
+    "typescript": "^5",
+    "typescript-eslint": "^7.8.0"
   }
 }
