--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-next",
+  "name": "valorant-front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,14 +11,12 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.3",
-    "@stomp/stompjs": "^7.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
     "react-stomp": "^5.1.0",
-    "sockjs": "^0.3.24",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3"
   },
@@ -33,8 +31,6 @@
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.1.0",
